# fundMan

./: .coverage  .rules  README.md  fund_report.db  main.py  pyproject.toml  report.db  schema.sql
data/: export_test.csv  export_test.xlsx  exported_products.csv  fund_report.db  products.csv  products.xls  schema.sql
fundman/: README.md  __init__.py  app.py  crud.py  data_processor.py  database.py  date_utils.py  db.py  models.py
fundman/crud/: __init__.py  investment_crud.py  wealth_product_crud.py
fundman/database/: __init__.py  connection.py  crud.py
fundman/models/: __init__.py  investment.py  pydantic_models.py  sqlalchemy_models.py  wealth_product.py
tests/: conftest.py  test_app.py  test_app_cli.py  test_assets.py  test_crud_extra.py  test_data_processor.py  test_database.py  test_date_utils.py  test_queries.py  test_transactions.py  test_wealth_products.py
