[project]
name = "fundman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "xlrd>=2.0.2",
    "xlwt>=1.3.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pytest[standard]>=8.4.1",
]
